[gd_scene load_steps=34 format=2]

[ext_resource path="res://Prefabs/Mario/Small.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/General/MarioPhysics.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Mario/FireFlower.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Objects/Enemies/Core/BaseSounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://GFX/Fonts/MFFont.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Prefabs/Mario/Big.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Prefabs/Mario/Beetroot.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Scripts/Powerups/FireFlower.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Powerups/Beetroot.gd" type="Script" id=9]
[ext_resource path="res://Prefabs/Mario/Lui.tres" type="SpriteFrames" id=10]
[ext_resource path="res://Scripts/Powerups/Lui.gd" type="Script" id=11]
[ext_resource path="res://Prefabs/Mario/IceFlower.tres" type="SpriteFrames" id=12]
[ext_resource path="res://Scripts/Powerups/IceFlower.gd" type="Script" id=13]
[ext_resource path="res://Prefabs/Mario/Propeller.tres" type="SpriteFrames" id=14]
[ext_resource path="res://Scripts/Powerups/Propeller.gd" type="Script" id=15]
[ext_resource path="res://GFX/Effects/Shaders/StarmanEffect.tres" type="Shader" id=16]
[ext_resource path="res://Prefabs/Mario/Boomerang.tres" type="SpriteFrames" id=17]
[ext_resource path="res://Scripts/Powerups/Boomerang.gd" type="Script" id=18]

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 16 )
shader_param/mixing = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 28 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 26 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1, 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1, 12 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1, 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 1, 12 )

[sub_resource type="Animation" id=16]
resource_name = "Big"
length = 0.24
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -12 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Small"
length = 0.24
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -28 ), Vector2( 0, -16 ) ]
}

[node name="Mario" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 18
moving_platform_apply_velocity_on_leave = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_pinned_properties_": [ "powerup_animations", "powerup_scripts" ]
}
powerup_animations = {
0: ExtResource( 1 ),
1: ExtResource( 6 ),
2: ExtResource( 3 ),
3: ExtResource( 7 ),
4: ExtResource( 10 ),
5: ExtResource( 12 ),
6: ExtResource( 14 ),
7: ExtResource( 17 )
}
powerup_scripts = {
2: ExtResource( 8 ),
3: ExtResource( 9 ),
4: ExtResource( 11 ),
5: ExtResource( 13 ),
6: ExtResource( 15 ),
7: ExtResource( 18 )
}

[node name="DebugText" type="Label" parent="."]
margin_left = -24.0
margin_top = -91.0
margin_right = 70.0
margin_bottom = -69.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 13 )
z_index = 10
frames = ExtResource( 1 )
animation = "Stopped"
playing = true
centered = false
offset = Vector2( -14, -31 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="CollisionBig" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -28 )
shape = SubResource( 2 )

[node name="InsideDetector" type="Area2D" parent="." groups=["Mario"]]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionSmall" type="CollisionShape2D" parent="InsideDetector"]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="CollisionBig" type="CollisionShape2D" parent="InsideDetector"]
position = Vector2( 0, -28 )
shape = SubResource( 4 )

[node name="BottomDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )
collision_layer = 7
collision_mask = 7

[node name="CollisionBottom" type="CollisionShape2D" parent="BottomDetector"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 5 )

[node name="CollisionBottom2" type="CollisionShape2D" parent="BottomDetector"]
position = Vector2( 0, 2 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 5 )

[node name="TopDetector" type="Area2D" parent="."]
visible = false
collision_layer = 11
collision_mask = 11

[node name="CollisionTop" type="CollisionShape2D" parent="TopDetector"]
position = Vector2( 0, -28 )
shape = SubResource( 6 )

[node name="CollisionTopBig" type="CollisionShape2D" parent="TopDetector"]
position = Vector2( 0, -58 )
shape = SubResource( 7 )

[node name="TopWaterDetector" type="Area2D" parent="."]
visible = false
collision_layer = 11
collision_mask = 11

[node name="Collision" type="CollisionShape2D" parent="TopWaterDetector"]
position = Vector2( 0, -58 )
shape = SubResource( 7 )

[node name="SmallRightDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionSmallRight" type="CollisionShape2D" parent="SmallRightDetector"]
position = Vector2( 12, -14 )
shape = SubResource( 8 )

[node name="CollisionSmallRightBig" type="CollisionShape2D" parent="SmallRightDetector"]
position = Vector2( 12, -23 )
shape = SubResource( 9 )

[node name="SmallLeftDetector" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionSmallLeft" type="CollisionShape2D" parent="SmallLeftDetector"]
position = Vector2( -12, -14 )
shape = SubResource( 10 )

[node name="CollisionSmallLeftBig" type="CollisionShape2D" parent="SmallLeftDetector"]
position = Vector2( -12, -23 )
shape = SubResource( 11 )

[node name="BaseSounds" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
playback_process_mode = 0
anims/Big = SubResource( 16 )
anims/RESET = SubResource( 15 )
anims/Small = SubResource( 14 )
